--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mobilewebproject_luis2022",
+  "homepage": "https://landresarias.github.io/ExpressProject/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
